--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -2,10 +2,11 @@
     display: grid;
     grid-template-columns: 1fr;
     padding: 20px;
+    height: 100vh;
 }
 
 .socials {
-    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 .cv {
