--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -1,5 +1,6 @@
 .landingPage {
     height: 100vh;
+    max-height:100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
