--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,6 +1,6 @@
 .desktop-menu {
     position: fixed;
-    bottom: 5%;
+    bottom: 0;
     left: 0;
     width: 100%;
     display: flex;
@@ -9,17 +9,17 @@
     padding: 3rem 0;
     background-color: transparent;
     z-index: 999;
+    width: 100vw;
   
     .menu-item {
       display: flex;
       justify-content: center;
       align-items: center;
-      position: relative;
-      width: 4.5rem;
-      height: 4.5rem;
+      width: 3rem;
+      height: 3rem;
       border-radius: 50%;
       margin: 0 1rem;
-      background-color:pink;
+      background-color:rgba(255, 192, 203, 0.467);
       color: #fff;
       text-decoration: none;
       font-weight: bold;
@@ -28,9 +28,9 @@
       box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
   
       &:hover {
-        width: 8.5rem;
-        height: 8.5rem;
-        background-color: palevioletred;
+        width: 3.5rem;
+        height: 3.5rem;
+        background-color: rgba(216, 112, 147, 0.436);
         font-size: 2rem;
       }
   
@@ -47,9 +47,28 @@
   
 
   
-// @media screen and (min-width: 601px) {
-//     .menu-item {
-//         width: 9rem;
-//         height: 9rem;
-//     }
-//     }
+ @media screen and (min-width: 601px) {
+    .desktop-menu {
+        .menu-item {
+            width: 9rem;
+            height: 9rem;
+        }
+        
+        &:hover {
+           width: 8.5rem;
+           height: 8.5rem;
+           background-color: palevioletred;
+           font-size: 2rem;
+         }
+     
+         .menu-item-text {
+           position: absolute;
+           font-size: 2rem;
+           top: 50%;
+           left: 50%;
+           transform: translate(-50%, -50%);
+           white-space: nowrap;
+         }
+    }
+    
+    }
