--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -1,10 +1,12 @@
 .portfolioWrapper {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    gap: 15px;
+    align-items: center;
+    gap: 10px;
     margin-bottom: 100px;
+    width: 100%;
+    background-color:rgb(248, 216, 222);
 }
 
   .portfolio__title.show{
