--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,8 @@
 :root {
   line-height: 1.5;
   font-weight: 400;
-//height: 100%;
+height: 100%;
   color: rgba(255, 255, 255, 0.87);
-  background-color: pink;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -19,7 +17,8 @@ body {
   place-items: center;
   // min-width: 320px;
   // min-height: 100%;
-  background-color: rgba(255, 192, 203, 0.244);
+  background-color:rgb(248, 216, 222);
+
 }
 
 h1 {
