(fix) working margin desktop

--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -52,6 +52,13 @@
     }
   }
 
+  
+  @media (min-width: 768px) {
+
+.landingPage {
+    height: 100vh;
+}
+  }
 // .landingPage {
 // margin-bottom: 10px;
 
