--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
   //padding-bottom: 26%;
 
   @media (min-width: 768px) {
-height: 100vh;
+height: 100%;
   }
 }
 
@@ -21,6 +21,10 @@ body {
   margin: 0;
   font-family: 'Libre Baskerville', serif;
   position: relative;
+  @media (min-width: 768px) {
+    height: 100vh;
+    width: 100vw;
+      }
 }
 
 .desktop-menu {
