--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
   line-height: 1.5;
   font-weight: 400;
 height: 100%;
-  color: rgba(255, 255, 255, 0.87);
+color: #213547;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
