--- a/src/App.scss
+++ b/src/App.scss
@@ -1,122 +1,80 @@
-#root {
+:root {
+  line-height: 1.5;
+  font-weight: 400;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
   max-width: 1280px;
-  //padding: 10% 0% 10% 20%;
   margin: 0 auto;
-  height: 100%;
-  //padding: 2rem;
-  text-align: center;
+  height: 100vh;
+place-items: center;
   scroll-behavior: smooth;
   background-color:rgb(248, 216, 222);
-  //padding-bottom: 26%;
 
   @media (min-width: 768px) {
 height: 100%;
   }
 }
 
-body {
-  box-sizing: border-box;
-  background-color:rgb(248, 216, 222);
-  //height: 100%;
-  margin: 0;
-  font-family: 'Libre Baskerville', serif;
-  position: relative;
-  @media (min-width: 768px) {
-    height: 100vh;
-    width: 100vw;
-      }
-}
 
-.desktop-menu {
-  //position: fixed;
-  //bottom: 0;
-  //left: 0;
-  width: 100%;
-  display: flex;
-  align-items: flex-end;
-  //justify-content: center;
-  align-items: center;
-  padding: 3rem 0;
-  background-color: transparent;
-  z-index: 999;
 
-  .menu-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    width: 3.5rem;
-    height: 3.5rem;
-    border-radius: 50%;
-    margin: 0 1rem;
-    background-color:pink;
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 1.3rem;
-    transition: all 0.3s ease;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
 
-    &:hover {
-      width: 4.5rem;
-      height: 4.5rem;
-      background-color: rgba(216, 112, 147, 0.46);
-      font-size: 2rem;
-    }
-
-    .menu-item-text {
-      position: absolute;
-      font-size: 2rem;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      white-space: nowrap;
-      color: white;
-    }
-
-  }
-}
 a {
   color: white;
   justify-content: center;
   align-items: center;
 }
 
+body {
+  height: 100%;
+  place-items: center;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: 'Libre Baskerville', serif;
+  position: relative;
+  overflow-x: hidden;
+  @media (min-width: 768px) {
+    height: 100vh;
+    width: 100vw;
+      }
+
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
 h1 {
   color: palevioletred;
 }
 
-
-// @media (min-width: 768px) {
-
-//   .desktop-menu{
-//     width: 100%;
-
-//     .menu-item {
-//       width: 7rem;
-//       height: 7rem;
-
-//       &:hover {
-//         width: 7.5rem;
-//         height: 7.5rem;
-//       }
-
-//       .menu-item-text {
-//         font-size: 3rem;
-//       }
-//     }
-
-
-//   }
-// }
-
-// .header {
-//   background-color: rgba(216, 112, 147, 0.484);
-//   margin-top: 0px;
-//   margin-left: 0;
-//   height: 100px;
-//   width: 100%;
-//   z-index: 999;
-// }
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: white
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
 
  
