--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,8 +1,10 @@
 .aboutWrapper {
     width: 100%;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
     margin-bottom: 20px;
+    background-color:rgb(248, 216, 222);
 }
 
 .aboutWrapper.show {
