--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -1,6 +1,6 @@
 .landingPage {
+    max-width: 100%;
     height: 100vh;
-    max-height:100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
