--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%;
+   width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,9 +12,7 @@
     width: 100vw;
   
     .menu-item {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+        position:relative;
       width: 3rem;
       height: 3rem;
       border-radius: 50%;
@@ -39,6 +37,7 @@
         font-size: 2rem;
         top: 50%;
         left: 50%;
+        color: white;
         transform: translate(-50%, -50%);
         white-space: nowrap;
       }
