--- a/src/index.scss
+++ b/src/index.scss
@@ -1,23 +1,48 @@
 :root {
   line-height: 1.5;
   font-weight: 400;
-height: 100%;
-color: #213547;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  scroll-behavior: smooth;
+  background-color:rgb(248, 216, 222);
+
+  @media (min-width: 768px) {
+height: 100%;
+  }
 }
 
 
+
+
+a {
+  color: white;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
-  margin: 0;
-  display: flex;
+  height: 100vh;
   place-items: center;
-  // min-width: 320px;
-  // min-height: 100%;
+  box-sizing: border-box;
   background-color:rgb(248, 216, 222);
+  margin: 0;
+  font-family: 'Libre Baskerville', serif;
+  position: relative;
+  overflow-x: hidden;
+  @media (min-width: 768px) {
+    height: 100vh;
+    width: 100vw;
+      }
 
 }
 
@@ -40,6 +65,10 @@ button {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+h1 {
+  color: palevioletred;
 }
 
 @media (prefers-color-scheme: light) {
