--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  max-width: 1280px;
   margin: 0 auto;
   height: 100vh;
 place-items: center;
@@ -37,7 +36,7 @@ body {
   overflow-x: hidden;
   @media (min-width: 768px) {
     height: 100vh;
-    width: 100vw;
+    min-width: 100vw;
       }
 
 }
