--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -6,6 +6,7 @@
     gap: 10px;
     width: 100%;
     background-color:rgb(248, 216, 222);
+    padding-bottom: 20px;
 }
 
   .portfolio__title.show{
@@ -42,8 +43,9 @@
 
   @media (min-width: 768px) {
     .portfolioWrapper {
-        display: grid;
-       grid-template-columns: 4fr 4fr 4fr;
+flex-direction: row;
+align-items: center;
+gap: 20px;
     }
 }
 
