--- a/src/components/TechStack/TechStack.scss
+++ b/src/components/TechStack/TechStack.scss
@@ -24,3 +24,10 @@ li {
     transition: all 0.3s ease;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25); 
 }
+
+@media (min-width: 768px) {
+    li {
+        width: 6rem;
+        height: 6rem;
+    }
+}
