--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -1,5 +1,4 @@
 .card {
- //border: 1px solid pink;
  border-radius: 15px;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
  width: 180px;
@@ -9,14 +8,12 @@
  background-color: white;
 
  &__image {
-    //border: 1px solid black;
     border-radius: 7px;
     width: 100%;
     height: 275px;
     margin: 0 auto;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     overflow: hidden;
-    //filter: blur(1px) opacity(0.8);
 
     &--styling {
         object-fit: cover;
@@ -42,16 +39,16 @@
     max-height: 400px;
     overflow: hidden;
     transition: max-height 0.5s ease-out;
-    z-index: 999;
+    z-index: 1;
   }
 
 
   &__btnContainer {
-    display: flex;
-    justify-content: center;
+    place-items: center;
     gap: 1em;
     position: absolute;
-    bottom: 10px;
+    bottom: 70px;
+    z-index: 2;
 
     &--btn{
         border-radius: 8px;
@@ -67,7 +64,7 @@
     }
 
     &--btn:hover {
-        border-color: palevioletred;
+        border-color: rgba(216, 112, 147, 0.553);
         background-color: lightpink;
         cursor: pointer;
         padding: 0.6em 1em;
@@ -81,9 +78,7 @@
   }
 }
 
-// .card:hover {
-//     padding: 2.5em;
-// }
+
 
 
 
