(fix): padding landingpage

--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -6,6 +6,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   
   .landingPage__title {
